Changed index title

--- a/Game UI/index.html
+++ b/Game UI/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>LAIG - Parser Example</title>
+    <title>LAIG - Chameleon</title>
 
 <style>
 body, html {
